# orchestration-general_00

./: .gitignore  BACKLOG_RESERVE.md  CURRENT_GOAL.md  FEATURES.md  LICENSE  MVP_SCOPE.md  PRE-FLIGHT-CHECKLIST.md  PROJECT_BRIEF.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.md  README.th.md  README.vi.md  README.zh.md  WORKING_NOTES.md  add-feature.bat  add-feature.sh  auto-setup.sh  common-orchestration-functions.ps1  conflict-recovery.ps1  conflict-recovery.sh  extract-features.sh  init.sh  launch.sh  manage-conflict-recovery.ps1  manage-orchestration.bat  manage-orchestration.ps1  monitor-orchestration-optimized.ps1  monitor-orchestration.bat  monitor-orchestration.ps1  monitor.bat  monitor.sh  orchestrate.bat  orchestration-tools.bat  pick-folder.ps1  preflight-setup.sh  (+6 more)
adapters/: base.py
assets/: A-001-project-setup-flow.md  A-001-project-type-setup-flow.md  A-002-tui-dashboard-wireframe.md  A-003-readme-banner-architecture.md  project-type-setup-flow.md  readme-banner-architecture.md  tui-dashboard-wireframe.md
core/: app.py
docs/: CONFLICT_RECOVERY.md  adapter-contract.md
orchestration/: BACKLOG_RESERVE.md  BOARD.md  test_web_project_detector.py  web_project_detector.py
sample-config/: godot-platformer.config.md  unity-2d-rpg.config.md  unreal-tps.config.md  web-react.config.md
specs/: SPEC-R-001.md  SPEC-R-002.md  SPEC-R-003.md  SPEC-R-004.md  SPEC-R-005.md  SPEC-R-006.md  SPEC-R-007.md  SPEC-R-008.md  SPEC-R-009.md  SPEC-R-010.md  SPEC-R-011.md  SPEC-R-012.md  SPEC-R-013.md  SPEC-R-014.md  (+15 more)
(+49 files in other folders)
