[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orch-engine"
version = "0.1.0"
description = "File-based multi-agent orchestration engine scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Park JeKwan" }]
dependencies = []
